Bug 354925 - HTML visible in "Missing File System Support Packages" alert
Summary: HTML visible in "Missing File System Support Packages" alert
Status: RESOLVED FIXED
Alias: None
Product: partitionmanager
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.0.0
Platform: Kubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: Andrius Štikonas
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-11-06 00:08 UTC by gjditchfield
Modified: 2016-02-18 15:01 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Screen capture (47.69 KB, image/png)
2015-11-06 00:09 UTC, gjditchfield
Details

Note You need to log in before you can comment on or make changes to this bug.
Description gjditchfield 2015-11-06 00:08:08 UTC
If Partition Manager detects an HFS +file system  and the HFS support packages are not installed, Partition Manager displays an alert dialog.  The dialog displays HTML tags as text, instead of interpreting them. See attached screen capture.

Reproducible: Always

Steps to Reproduce:
1. Put an HFS+-formatted disk in an external USB disk enclosure.
2. Plug the enclosure into a USB port.
3. Launch Partition Manager.

Actual Results:  
The dialog that appears contains raw HTML table tags.

Expected Results:  
The text in the <td> tags should have been placed in the columns of the dialog.
Comment 1 gjditchfield 2015-11-06 00:09:07 UTC
Created attachment 95352 [details]
Screen capture
Comment 2 Andrius Štikonas 2015-11-06 22:44:45 UTC
Thanks for reporting. I was aware of some issue like that but so far was not able to reproduce myself. I'll try your steps to reproduce it.
Comment 3 Gregor Mi 2015-11-08 22:43:03 UTC
I can confirm this message box on my system, too. Happens at startup.
Comment 4 stupor_scurvy343 2016-01-23 19:05:08 UTC
I can reproduce. It seems it is caused by arguments to xi18nc getting escaped (see bug #357274).
Comment 5 Andrius Štikonas 2016-02-18 15:01:45 UTC
Git commit d2a013222ea7835ad9d14f3ee9f96bba7a482412 by Andrius Štikonas.
Committed on 18/02/2016 at 14:59.
Pushed by stikonas into branch 'master'.

Use KLocalizeStrings to avoid nested xi18n calls.
Nested xi18n calls cause QStrings to be escaped and makes HTML
visible in KMessageBox.

M  +20   -21   src/gui/mainwindow.cpp

http://commits.kde.org/partitionmanager/d2a013222ea7835ad9d14f3ee9f96bba7a482412