Use KLocalizeStrings to avoid nested xi18n calls. Nested xi18n calls cause QStrings to be escaped and makes HTML visible in KMessageBox.

BUG: 354925